0 not insert id

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ a.bind_edit:hover {
 	margin:86px 10px 10px 10px;
 }
 #key_num_enter {	height:152px; }
-#key_num_insert { width:152px; }
+#key_num_0 { width:152px; }
 #key_num_plus { height:152px; }
 
 /* 
