--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,65 @@ body {
 a { color:#aaa; text-decoration:none; }
 a:hover { color:#ddd; text-decoration:underline; }
 
+ul#nav {
+  text-align: left;
+  display: inline;
+  margin: 0;
+  padding: 15px 4px 17px 0;
+  list-style: none;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+ul#nav li {
+  display: inline-block;
+  margin-right: -5px;
+  position: relative;
+  padding: 15px 20px;
+  background: #333;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  z-index:1000;
+}
+ul#nav li:hover {
+  background: #444;
+  color: #fff;
+}
+ul#nav li ul {
+  padding: 0;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 250px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+ul#nav li ul li { 
+  background: #444; 
+  display: block; 
+  color: #fff;
+  text-shadow: 0 -1px 0 #000;
+}
+ul#nav li ul li:hover { background: #777; }
+ul#nav li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
 /* Header */
 #header { 
 	min-height:85px;
@@ -308,4 +367,29 @@ a.bind_edit:hover {
 }
 .edit_row {
   padding:5px 0;
+}
+
+textarea {
+  height:600px;
+  width:600px;
+}
+
+.close {
+  float:right;
+}
+
+.popup {
+  display:none;
+  width:800px;
+  padding:10px;
+  border:2px solid #888;
+  background-color:#444;
+  margin:30px auto 0;
+  padding:6px;
+  position:absolute;
+  left: 50%;
+  top: 20%;
+  margin-left: -400px;
+  margin-top: -40px; /* This should be half of the total height of your div */
+  z-index:1000;
 }
