--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,10 @@ ul#nav li:hover ul {
 /* 
  * Start Keyboard Configuration
  */
-#keyboard_container { margin:4px 20px 10px 20px; }
+#keyboard_container {
+  margin:4px 20px 10px 20px;
+  max-width:1420px;
+}
 #main {	float:left; }
 
 /* General */
